testsuite/bsc.interra/bugs/bugID298/bug.bsv.bsc-out.expected
checking package dependencies
Error: "bug.bsv", line 9, column 9: (P0005)
  Unexpected SV 3.0 keyword `return'; expected `{' or identifier starting with
  lowercase
